--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "lang": "en-US",
-  "name": "Pacman PWA",
-  "short_name": "Pacman PWA",
+  "name": "Video Player PWA",
+  "short_name": "Video Player PWA",
   "icons": [
     {
       "src": "assets/images/launcher-icon-0-75x.png",
