--- a/manifest.json
+++ b/manifest.json
@@ -43,5 +43,5 @@
   "start_url": "index.html",
   "background_color": "#424242",
   "theme_color": "#fed049",
-  "display": "fullscreen"
+  "display": "standalone"
 }
